[workspace]
resolver = "2"
members = ["budget", "core", "http_server", "infra", "migrations"]
default-members = ["budget"]

[workspace.package]
description = "A personal budget management tool"
readme = "README.md"
homepage = "https://budget.github.io"
repository = "https://github.com/sbeardsley/budget"
keywords = ["agile", "issues", "tracking"]
rust-version = "1.78"
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["github.com/sbeardsley"]
include = ["src/**/*.rs", "tests/**/*.rs", "LICENSE-*", "README.md"]

[workspace.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
db_setup = "cd infra && sqlx database setup --source=../migrations"
db_migrate = "cd infra && sqlx migrate run --source../migrations"
db_prepare = "cd infra && cargo sqlx prepare"
