[package]
name = "budget"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["std", "backtrace"] }
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
clap_complete = "4.5.7"
confy = "0.6.1"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
domain = { path = "../core", package="core"}
dunce = "1.0.4"
indicatif = "0.17.8"
infra = { path = "../infra" }
log = "0.4.22"
once_cell = "1.19.0"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
serde = { version = "1.0.203", features = ["derive"] }
tabled = "0.15.0"
tracing = { version = "0.1.40", features = [ "log"] }
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
