[package]
name = "infra"
edition = "2021"
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
include.workspace = true

[dependencies]
anyhow = { version = "1.0.86", features = ["std", "backtrace"] }
core = { path = "../core" }
sqlx = { version = "0.7.4", features = [
    "uuid",
    "chrono",
    "sqlite",
    "runtime-tokio",
] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.8.0", features = [
    "v4",
    "v7",
    "serde",
    "fast-rng",
    "macro-diagnostics",
] }
tokio = { version = "1.38.0", features = ["full"] }
